app/View/Themed/Default/webroot/css/src/base/_slidetabs.scss
/*******************************************************************************
 * Slidetabs general layout
 ******************************************************************************/

#slidetabs {
  float: right;
  overflow: hidden;
  z-index: 5;
  position: relative;
	line-height: 1.7;
}

.slidetab {
  clear: right;
  float: right;
  margin: 5px -1px 2px 10px;
  overflow: hidden;

  form {
    clear: none;
  }
}

.slidetab-tab {
  border-right: none !important;
  text-align: center;
  &:hover {
    cursor: pointer;
  }
}

.slidetab-tab {
  position:relative;
  float: left;
  margin-top: 5px;
  padding: 4px;
  width: 20px;
  height: 20px;
}

.slidetab-tab-button {
  position: absolute;
  width: 20px;
  line-height: 14px;
  top: 50%;
  margin-top: -8px;
}

.slidetab-content {
  margin-left: 28px;
  min-height: 34px;
  width: 190px;
  padding: 10px 15px;
}

.slidetab_tree {
  > li {
    margin-bottom: 1em;
  }

  > li:last-child {
    margin-bottom: 0;
  }
}

.slidetab_subtree {
	padding-left: 2em;
	margin-top: -1em;

  list-style: square;
}

/* Slidtab Userlist
// ----------------------------------- */

#slidetabUserlist-counter {
	position: absolute;
	right: -2px;
	bottom: -7px;
	min-width: 6px;
	background: #111111;
	border: 1px solid white;
	padding: 0 1px;
	}

.slidetabUserlist-counter-inner {
	margin: 0 auto;
	text-shadow: none;
	text-align: center;
	color: white;
	right: 0px;
	bottom: 0px;
	line-height: 12px;
	font-size: 8px;
	font-weight: bold;
	}

// slidetab Recent Postings
// -------------------------------------

.slidetab-recentposts .slidetab_tree,
.slidetab-recententries .slidetab_tree {
	> li {
		margin-bottom: 0.5em !important;
		}
	> li li {
    // gentle handling of overflow for long words in subject
    // -------------------------------------
		overflow: hidden;
		text-overflow: ellipsis;

		padding-left: 26px !important;
		text-indent:  -1.75em;
		font-weight: normal;
		}

  > li li [class^="icon-"], li [class*=" icon-"] {
    text-align: right;
    padding-right: 0.25em;
    }
  }


// slidetab Shoutbox
// -------------------------------------
#shoutbox {

  textarea {
    font-size: 12px;
    line-height: 16px;
    margin: 0 0 1em 0;
    padding: 2px 5px;
    width: 180px;
    resize: none;
  }

  img {
    max-width: 130px;
  }

  .shouts {
    word-wrap: break-word;
  }

  .shout {
    margin: 2px 0;
  }

  .username {
  }

  .info_text {
    color: #999;
    text-align: center;
  }

}

